Fix sizing and alignment of skill icons

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2033,12 +2033,13 @@ input, select, textarea {
 			border: solid 2px #fff;
 			display: inline-block;
 			font-size: 1.35em;
-			height: calc(3em + 2px);
-			line-height: 3em;
+			height: calc(4em + 2px);
+			line-height: 4em;
 			text-align: center;
-      width: calc(3em + 2px);
+      width: calc(4em + 2px);
       display: flex;
       justify-content: center;
+      align-items: center;
 		}
 
 			.icon.major:before {
